--- a/core/hamburger/_hamburger.sass
+++ b/core/hamburger/_hamburger.sass
@@ -11,6 +11,7 @@
  */
 
 $hamburger-line-color: #000 !default
+$hamburger-line-height: 10% !default
 
 .ui-component-hamburger
   max-height: 100px
@@ -18,10 +19,10 @@ $hamburger-line-color: #000 !default
   .ui-component-content-wrapper
     min-height: 40px
     height: 60%
+    width: 70%
 
 .hamburger-line
-  height: 20%
-  margin-bottom: 17%
+  height: $hamburger-line-height
   width: 100%
   background-color: $hamburger-line-color
   border-radius: 20%
