--- a/core/sidebar/_sidebar.sass
+++ b/core/sidebar/_sidebar.sass
@@ -14,6 +14,7 @@
 
 $sidebar-width: 320px !default
 $primary-background-color: #fff !default
+$sidebar-background-color: false !default
 $responsive-width: 1280px !default
 $sidebar-animation-timing: 500ms !default
 
@@ -23,7 +24,11 @@ $sidebar-animation-timing: 500ms !default
   position: absolute
   top: 0
   z-index: 9000
-  background-color: $primary-background-color
+  @if $sidebar-background-color
+    background-color: $sidebar-background-color
+  @else
+    background-color: $primary-background-color
+
   overflow: hidden
 
   @media (min-width: 0px) and (max-width: $responsive-width)
