Fixed browser compat

--- a/core/_core.sass
+++ b/core/_core.sass
@@ -12,6 +12,7 @@
 html
   @include maxed
   font-size: 18px
+  font-family: Verdana,Geneva,'DejaVu Sans',sans-serif
   padding: 0
   margin: 0
   overflow: hidden
