--- a/animation/_ripple.sass
+++ b/animation/_ripple.sass
@@ -14,6 +14,7 @@
 .ui-component-ripple
   overflow: hidden
   position: relative
+  cursor: pointer
 
 .ui-component-ripple:after
   content: ""
@@ -22,6 +23,7 @@
   height: 100%
   top: 0
   left: 0
+  pointer-events: none
   background-image: radial-gradient(circle, #FFF 10%, transparent 10%)
   background-repeat: no-repeat
   background-position: 50%
