Fixed descendant selectors

--- a/core/hamburger/_hamburger.sass
+++ b/core/hamburger/_hamburger.sass
@@ -16,7 +16,7 @@ $hamburger-line-height: 10% !default
 .ui-component-hamburger
   max-height: 100px
   max-width: 100px
-  .ui-component-content-wrapper
+  > .ui-component-content-wrapper
     min-height: 40px
     height: 60%
     width: 70%
