--- a/core/sidebar/_sidebar.sass
+++ b/core/sidebar/_sidebar.sass
@@ -48,7 +48,7 @@ $sidebar-animation-timing: 500ms !default
     @media (min-width: 0px) and (max-width: $responsive-width)
       right: -$sidebar-width
 
-  .ui-component-content-wrapper
+  > .ui-component-content-wrapper
     height: calc(100% + 12px)
     width: calc(100% + 11px)
     overflow: scroll
