--- a/core/page/_page.sass
+++ b/core/page/_page.sass
@@ -19,7 +19,7 @@ $page-title-height: '64px' !default
   overflow: scroll
 
   // height will be overridden via JavaScript if there's a title element
-  .ui-component-content-wrapper
+  > .ui-component-content-wrapper
     width: 100%
     height: 100%
     padding: 3%
@@ -29,7 +29,7 @@ $page-title-height: '64px' !default
     width: 100%
     border-bottom: solid 1px #000
 
-    .ui-component-content-wrapper
+    > .ui-component-content-wrapper
       height: 50px
       padding: 0
       font-size: 35px
